--- a/.github/workflows/cicd-1.yaml
+++ b/.github/workflows/cicd-1.yaml
@@ -12,18 +12,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: checkout
-      uses: action/checkout@v4
+      uses: actions/checkout@v4
   
   image-build:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
     - name: checkout
-      uses: action/checkout@v4
+      uses: actions/checkout@v4
 
   deploy:
     runs-on: ubuntu-latest
     needs: [image-build]
     steps:
     - name: checkout
-      uses: action/checkout@v4
+      uses: actions/checkout@v4
